--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,4 +1,5 @@
 .main {
+    height: 100%;
     background-color: $primary_color;
     padding: 100px 0;
     background-image: url(../assets/img/Background_small.png);
@@ -36,9 +37,7 @@
     transition: 0.5s;
 
 }
-// .tablinks:hover {
-//     background-color: $secondary_color;
-// }
+
 .active {
     background-color: $muted_color;
 }
@@ -106,9 +105,7 @@ select {
     background-color: $accent_color;
     box-shadow: 0 0 20px 10px $bright_color;
 }
-// #Memorized {
-//     display: none;
-// }
+
 .thoughts_item {
     border: 3px solid $muted_color;
     border-radius: 30px;
